# pg-tamper-log

./: README.md
demo/: demo.sql
rust/pg_tamperlog_rust/: .gitignore  Cargo.toml  pg_tamperlog_rust.control
rust/pg_tamperlog_rust/pg_regress/sql/: setup.sql
rust/pg_tamperlog_rust/src/: lib.rs
sql/: pg_tamperlog--1.0--1.1.sql  pg_tamperlog--1.0.sql  pg_tamperlog--1.1.sql  pg_tamperlog.control  tamper_log--1.0.sql
sql/demo/: demo.sql
